# tox-envlist

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  contributing.rst  index.rst
doc-source/api/: tox-envlist.rst
tests/: common.py  conftest.py  example_tox.ini  example_tox_braces.ini  requirements.txt  test_tox_envlist.py  test_tox_envlist_braces.py
tests/test_tox_envlist_/: test_tox_envlist_3_10_backward_envlist_posargs_.txt  test_tox_envlist_3_10_backward_manual_envs_posargs_.txt  test_tox_envlist_3_10_forward_invalid_combo_.txt  test_tox_envlist_3_10_forward_manual_envs_.txt  test_tox_envlist_3_10_forward_manual_envs_posargs_.txt  test_tox_envlist_3_10_manual_envs_.txt  test_tox_envlist_3_11_backward_invalid_combo_.txt  test_tox_envlist_3_11_backward_manual_envs_.txt  test_tox_envlist_3_11_forward_envlist_posargs_.txt  test_tox_envlist_3_11_forward_invalid_combo_.txt  test_tox_envlist_3_11_forward_manual_envs_.txt  test_tox_envlist_3_11_forward_manual_envs_posargs_.txt  test_tox_envlist_3_12_backward_manual_envs_.txt  test_tox_envlist_3_12_backward_qa_envlist_.txt  test_tox_envlist_3_12_forward_manual_envs_.txt  test_tox_envlist_3_12_forward_manual_envs_posargs_.txt  test_tox_envlist_3_12_forward_qa_envlist_.txt  test_tox_envlist_3_13_backward_invalid_combo_.txt  test_tox_envlist_3_13_backward_manual_envs_posargs_.txt  test_tox_envlist_3_13_forward_invalid_combo_.txt  test_tox_envlist_3_13_forward_manual_envs_.txt  test_tox_envlist_3_7_backward_invalid_combo_.txt  test_tox_envlist_3_7_backward_manual_envs_posargs_.txt  test_tox_envlist_3_7_forward_envlist_posargs_.txt  test_tox_envlist_3_7_forward_manual_envs_posargs_.txt  test_tox_envlist_3_7_manual_envs_.txt  test_tox_envlist_3_8_backward_manual_envs_.txt  test_tox_envlist_3_8_forward_invalid_combo_.txt  test_tox_envlist_3_8_forward_manual_envs_.txt  test_tox_envlist_3_8_forward_manual_envs_posargs_.txt  test_tox_envlist_3_9_backward_invalid_combo_.txt  test_tox_envlist_3_9_backward_manual_envs_posargs_.txt  test_tox_envlist_3_9_forward_manual_envs_.txt  test_tox_envlist_3_9_forward_manual_envs_posargs_.txt
tests/test_tox_envlist_braces_/: test_tox_envlist_3_10_backward_invalid_combo_.txt  test_tox_envlist_3_10_forward_envlist_posargs_.txt  test_tox_envlist_3_10_forward_manual_envs_.txt  test_tox_envlist_3_10_forward_qa_envlist_.txt  test_tox_envlist_3_10_invalid_combo_.txt  test_tox_envlist_3_10_qa_envlist_.txt  test_tox_envlist_3_11_backward_envlist_posargs_.txt  test_tox_envlist_3_11_forward_invalid_combo_.txt  test_tox_envlist_3_11_forward_manual_envs_posargs_.txt  test_tox_envlist_3_11_forward_qa_envlist_.txt  test_tox_envlist_3_12_backward_manual_envs_posargs_.txt  test_tox_envlist_3_12_forward_invalid_combo_.txt  test_tox_envlist_3_13_backward_envlist_posargs_.txt  test_tox_envlist_3_13_backward_invalid_combo_.txt  test_tox_envlist_3_13_backward_manual_envs_posargs_.txt  test_tox_envlist_3_13_forward_envlist_posargs_.txt  test_tox_envlist_3_13_forward_invalid_combo_.txt  test_tox_envlist_3_13_forward_qa_envlist_.txt  test_tox_envlist_3_7_backward_qa_envlist_.txt  test_tox_envlist_3_7_manual_envs_posargs_.txt  test_tox_envlist_3_8_backward_envlist_posargs_.txt  test_tox_envlist_3_8_forward_manual_envs_.txt  test_tox_envlist_3_9_backward_manual_envs_posargs_.txt
tox_envlist/: __init__.py
